--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,100 @@
-/* App.css */
-
-/* Fondo de la página completa */
-body {
-  background-color: #8b4f4f;  /* Color de fondo gris claro */
+html, body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif; /* Establece una fuente global */
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
-.App {
-  text-align: center;
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
-.App-logo {
-  width: 100px;
-  height: 100px;
-  pointer-events: none;
+body {
+  background-color: #ffffff;
+  font-family: Arial, sans-serif;
 }
 
-.App-header {
-  background-color: #70ddd4;  /* Fondo de color para el encabezado */
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(20px + 2vmin);
-  color: rgb(173, 0, 87);
+.small-header {
+  width: 100%;
+  padding: 20px;
+  background-color: #0077ff;
+  text-align: left;
+  font-size: 18px;
+  color: #333;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.App-link {
-  color: #a50000;
+.small-header h2 {
+  margin: 0;
+  font-weight: normal;
 }
-.icono-animado {
+
+.carousel-container {
+  width: 800px;
+  height: 200px;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+}
+
+.flyer-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+.slick-dots {
   position: absolute;
-  top: 200px;
-  left: 600px;
-  z-index: 10;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
-.mi-icono {
-  width: 2px;  /* Tamaño del ícono */
-  height: 2px;
+.slick-dots li button:before {
+  font-size: 20px;
+  color: #7700ff;
+  opacity: 0.5;
 }
 
-/* Puedes agregar más estilos o cambiar los valores según sea necesario */
+.slick-dots li.slick-active button:before {
+  color: #b3ff00;
+  opacity: 1;
+}
+
+.slick-prev, .slick-next {
+  font-size: 30px;
+  color: #000000 !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
+  border-radius: 50%;
+  padding: 10px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1000;
+}
+
+.slick-prev {
+  left: 10px !important;
+}
+
+.slick-next {
+  right: 10px !important;
+}
+
+.body-content {
+  width: 100%;
+  padding: 20px;
+  background-color: #f4f4f4;
+  font-size: 16px;
+  color: #333;
+  text-align: center;
+  box-sizing: border-box;
+  margin-top: 20px;
+}
