--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,9 @@ body {
 }
 
 .carousel-container {
-  width: 800px;
-  height: 200px;
+  width: 90%; /* Ajuste para móvil */
+  max-width: 800px;
+  height: auto; /* Dejar que se adapte a la proporción de las imágenes */
   margin: 0 auto;
   position: relative;
   overflow: hidden;
@@ -41,7 +42,7 @@ body {
 
 .flyer-image {
   width: 100%;
-  height: 100%;
+  height: auto; /* Ajustar proporción automáticamente */
   object-fit: contain;
   border-radius: 10px;
 }
@@ -97,4 +98,32 @@ body {
   text-align: center;
   box-sizing: border-box;
   margin-top: 20px;
+}
+
+/* Media Queries para Móviles */
+@media (max-width: 768px) {
+  .small-header {
+    text-align: center;
+    font-size: 16px;
+    padding: 15px;
+  }
+
+  .carousel-container {
+    width: 100%; /* Ocupa todo el ancho */
+    height: auto;
+  }
+
+  .flyer-image {
+    border-radius: 5px; /* Reducir radios en móvil */
+  }
+
+  .slick-prev, .slick-next {
+    font-size: 20px;
+    padding: 5px;
+  }
+
+  .body-content {
+    font-size: 14px;
+    padding: 10px;
+  }
 }
